k8s/base/monitoring-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: securenexus
    purpose: observability
